Fix bug 692568. Set up initial clist_color_info to match pdf14 device.

For the funky RGBW device, since it is 4 component additive color the pdf14 logic chose
a pdf14_clist_RGB_device which has 3 components and a depth of 24. The clist logic uses
the clist_color_info.depth which was never set correctly to match the pdf14 device (depth
= 24), so it wrote 32-bits and only read 24, causing the clist reader to bomb.